git HEAD

    * Breaking change: $efa->name_candidates and $efa->place_candidates now
      return lists of Travel::Status::DE::EFA::Stop objects rather than
      just strings.

Travel::Status::DE::VRR 3.09 - Sun Mar 23 2025

    * Trip: Add polyline accessor

Travel::Status::DE::VRR 3.08 - Sat Feb 08 2025

    * EFA->new_p: Return $efa instance in rejected promise if it was
      rejected after parsing (e.g. due to ambiguous name/place parameter)

Travel::Status::DE::VRR 3.07 - Mon Jan 27 2025

    * Departure: Fix ->id accessor
    * Add "Rolph" service definition

Travel::Status::DE::VRR 3.06 - Sun Jan 05 2025

    * EFA APIs know two types of stop IDs: numbers and codes. This module now
      consistently refers to numeric stop IDs as "id_num" and stop ID codes as
      "id_code".
    * Departure: Rename ->stop_id to ->stop_id_num
    * Stop: Rename ->id to ->id_num
    * Stop: Rename ->stop_id to ->id_code
    * Departure: Add ->id accessor.

Travel::Status::DE::VRR 3.05 - Mon Dec 30 2024

    * efa-m: add --raw-json option
    * EFA stopFinder: add special handling for #results == 1

Travel::Status::DE::VRR 3.04 - Sun Dec 22 2024

    * EFA: Add NWL service definition

Travel::Status::DE::VRR 3.03 - Sat Nov 09 2024

    * efa-m: handle undefined platforms
    * Trip->polyline: pass `fallback => 1` to return beeline between stops
      if the backend did not provide a polyline.

Travel::Status::DE::VRR 3.02 - Wed Oct 16 2024

    * Stop: Add ar_delay, dep_delay, delay, stop_id accessos
    * EFA: Fix place_candidates
    * EFA: Add stop and stops functions
    * EFA: Add static get_services method
    * efa-m: Add -j / --with-jid option
    * efa-m -Oa, -Ob, -Of: Show delays
    * EFA, efa-m: Add stopfinder ("?foo") and stop search ("lat:lon") modes
    * Add ...::Trip and ...::Info modules
    * Info, Stop, Trip: Note that the API of these modules is not yet final
      and may change between minor versions

Travel::Status::DE::VRR 3.01 - Thu Oct 03 2024
